fix banner photo spacing

--- a/src/scss/partials/_headers.scss
+++ b/src/scss/partials/_headers.scss
@@ -1,4 +1,5 @@
 header {
+	background-size: 100% auto;
 	background-repeat: no-repeat;
 	background-attachment: scroll;
 	background-position: center center;
@@ -15,3 +16,11 @@ header {
 #about-header {
 	background-image: url('../img/production/broken.jpg');
 }
+
+// .intro-text-about {
+// 	display: flex;
+// 	flex-direction: column;
+// 	justify-content: center;
+// 	align-items: center;
+// 	padding: 1rem 0;
+// }
